# uefi-rs-helloworld

./: .gitignore  Cargo.toml  MEMO.md
.cargo/: config.toml
src/helloworld/: main.rs
src/image_path/: main.rs
src/memory_map/: main.rs
