[package]
name = "my-uefi-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "helloworld"
path = "src/helloworld/main.rs"

[[bin]]
name = "image_path"
path = "src/image_path/main.rs"

[dependencies]
log = "0.4"
uefi = "0.17"
uefi-services = "0.14"
